--- a/index.html
+++ b/index.html
@@ -17,9 +17,87 @@
         <li><a href="#">Contato</a></li>
       </ul>
     </nav>
-    <h1>Nikolas Martins Brandão Oliveira</h1>
-    <h2>Frontend Developer</h2>
+    <hgroup>
+      <h1>Nikolas Martins Brandão Oliveira</h1>
+      <h2>Frontend Developer</h2>
+    </hgroup>
   </header>
+
+  <main>
+    <section>
+      <h3>Competências</h3>
+      <article>
+        <p>
+          Desenvolvedor Frontend, com cerca de 4 anos de experiência em soluções
+          para web e mobile, com conhecimentos avançados em JavaScript, React,
+          React Native e Node.
+        </p>
+        <p>
+          Trabalhei no gerenciamento de equipes na construção de soluções para o
+          Varejo envolvendo desenvolvimento móvel, chatbots e inteligência artificial.
+        </p>
+        <p>
+          Conhecimentos avançados em React Native no desenvolvimento de aplicações
+          mobile e conhecimento básico em Swift.
+        </p>
+      </article>
+    </section>
+    <section>
+      <h3>Experiência</h3>
+      <article class="experience">
+        <h4>Mttechne, São Paulo <i>- Programador</i></h4>
+        <b>Abril de 2020 - Atual</b>
+        <ul>
+          <li>Desenvolvimento de soluções para a Smiles Argentina utilizando React.</li>
+          <li>Implementação de testes de unitários utilizando React, Jest e Enzyme.</li>
+          <li>Planejamento e gerenciamento de Sprints.</li>
+        </ul>
+      </article>
+      <article class="experience">
+        <h4>Grupo Mateus, São Luís <i>- Product Manager</i></h4>
+        <b>Dezembro de 2019 - Abril de 2020</b>
+        <ul>
+          <li>Implementação de soluções envolvendo Chatbots, com Dialogflow,
+            Node.JS, React, React Native e banco de dados PostgreSQL.</li>
+          <li>Coordenar e cooperar no planejamento e gerenciamento das Sprints.</li>
+          <li>Otimização do trabalho entregue pelo time.</li>
+        </ul>
+      </article>
+      <article class="experience">
+        <h4>Grupo Mateus, São Luís <i>- Programador</i></h4>
+        <b>Junho de 2018 - Dezembro de 2019</b>
+        <ul>
+          <li>Desenvolvimento de aplicação mobile interna utilizando
+            React Native e Spring e banco de dados PostgreSQL.</li>
+          <li>Implantação de projeto de boas práticas envolvendo Api’s REST.</li>
+          <li>Migração de soluções para GraphQL.</li>
+        </ul>
+      </article>
+      <article class="experience">
+        <h4>UDI Hospital, São Luís <i>- Programador</i></h4>
+        <b>Janeiro de 2018 - Junho de 2018</b>
+        <ul>
+          <li>Desenvolvimento de soluções hospitalares utilizando Laravel,
+            Vue.Js e banco de dados Oracle.</li>
+          <li>Implementação de pequenos sistemas utilizando Django, React e Ionic.</li>
+        </ul>
+      </article>
+      <article class="experience">
+        <h4>Tribunal de Contas do Estado do Maranhão, São Luís <i>- Estagiário - Programador</i></h4>
+        <b>Agosto de 2017 - Dezembro de 2017</b>
+        <ul>
+          <li>Desenvolvimento do Sistema de Auditoria Eletrônica, utilizando Java,
+            Ebean e banco de dados Oracle</li>
+          <li>Planejamento e desenvolvimento da Api de dados abertos do
+            Sistema de Auditoria Eletrônica, utilizando Spring e Vue.js</li>
+        </ul>
+      </article>
+    </section>
+    <section>
+      <h3>Formação</h3>
+    </section>
+  </main>
+
   <footer>
     <small>Photo by Martin Adams on Unsplash</small>
   </footer>
