feat: add formation data and ajust margins

--- a/index.html
+++ b/index.html
@@ -136,6 +136,23 @@
     </section>
     <section>
       <h3>Formação</h3>
+      <article>
+        <h4>IFMA - Monte Castelo <i>— Sistemas de Informação</i></h4>
+        <b>Janeiro de 2013 - Atual</b>
+        <p>
+          Sólidos conhecimentos em desenvolvimento e análise de sistemas, padrões de projetos, redes e
+          gerenciamento de projetos.
+        </p>
+        <p>
+          Foco atual em inteligência artificial e aprendizagem de máquina, colaborador na publicação do
+          Machina Sapiens.
+        </p>
+        <small>
+          <a href="https://medium.com/machina-sapiens" target="_blank" rel="noopener noreferrer">
+            Machina Sapiens
+          </a>
+        </small>
+      </article>
     </section>
   </main>
 
